--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     -webkit-box-sizing:border-box;
     -moz-box-sizing:border-box;
     -o-box-sizing:border-box;
+
 }
 html, body { max-width: 100%;}
 body{
@@ -194,9 +195,9 @@ color: #fff;
     width: 100%;
 
 }
-.economy .row .card:hover img{
-    transform: scale(1.3); 
-
+.economy .row .card img:hover {
+    transform: rotate(20deg); 
+    transition: all 0.5s ease-in-out;
 }
 .economy .row h4{
 font-size: 2rem;
