--- a/css/style.css
+++ b/css/style.css
@@ -437,7 +437,7 @@ font-size: 23px;
 footer .conrad a{
     display: block;
     line-height: 2.5;
-    color: #888;
+    color: #9a9494;
     text-decoration: none;
 }
 footer .conrad input{
