--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ header i.fa{
     top: 40px;
     cursor: pointer;
     display: none;
+}
+    nav{
+    height: 70px;
 
 }
 
@@ -61,7 +64,7 @@ header{
 }
 header .logo{
     width:20%;
-    float: left;
+    
 }
 header .logo h2{
     color:#fff;
@@ -71,7 +74,7 @@ header .logo h2 span{
 }
 header .nav-list{
 width:100%;
-height: 50px;
+
 float: right;
 display: flex;
 justify-content: space-around;
@@ -95,6 +98,9 @@ header nav .nav-list a:hover{
 }
 @media (max-width: 575px){
     header{background: #000;}
+    header .nav-list{
+        display: block;
+    }
     header .logo{
         text-align: center;
     }
@@ -102,9 +108,11 @@ header nav .nav-list a:hover{
     header i.fa{
         display: block;
         color: red;
-
-
     }
+       
+
+
+
     header nav .nav-list{
         display: none;
         text-align: center;
@@ -344,20 +352,25 @@ section.services .feet p{
     background-repeat: no-repeat;
     overflow: hidden;
     }
+    .blog .container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 .blog h2{
     color: #fff;
-    width: 766px;
+    width: 80%;
    text-align: center;
    padding-top: 100px;
    font-size: 38px;
-   margin-left: 225px;
+   
 
 }
 .blog h2 span{
    color: #1a53ff; 
 }
 @media (max-width: 575px){
-    .blog h2{width:200%;}
+    .blog h2{font-size: 18px !important}
     }
 
 /*why-choose-us*/
@@ -450,24 +463,26 @@ section.question .images .left-2{
         width:200%;
     }
     section.question .images{
-        width: 50%
+        width: 100%;
     }
-    section.question .images .right-1{
-    
-    width:30%;
+    section.question .images .right-1
+    ,section.question .images .right-2,
+    section.question .images .left-1,
+    section.question .images .left-2{
+    float: none;
+    width:100%;
 }
-section.question .images .right-2{
-    
-    width: 20%;
+
 }
-}
-/*footer*/
+
 /*footer*/
 footer{
     width: 100%;
-    height: 400px;
     background-image: url("../images/footer.jpg");
     position: relative;
+    background-size: cover;
+    min-height: 500px;
+    background-repeat: no-repeat;
     color: #fff;
     padding: 50px 0 50px 0;
 
