--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ z-index: 99999
 }
 /*********header***********/
 header{
-    background: #6666ff;
+    background: #fff;
         padding-top:2em;
 
 }
@@ -57,6 +57,7 @@ header .row {
     width:100%;
     box-shadow: 4px 5px 45px #333;
     padding:10px 0;
+    background: #0033cc;
 }
 header .logo{
     width:20%;
