--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,11 @@ header i.fa{
    
 .sticky{
     background:#5E5EDE;
-    color: #FFF;
+    color: #fff;
       position: fixed;
   top: 0;
-  width: 100%;
-z-index: 99999
+  width: 80%;
+z-index: 99999;
 }
 /*********header***********/
 header{
@@ -96,7 +96,7 @@ header nav .nav-list a:hover{
     border-radius: 5px;
     transition: 2s all ease-in-out;
 }
-@media (max-width: 575px){
+@media (max-width: 768px){
     header{background: #000;}
     header .nav-list{
         display: block;
@@ -190,7 +190,7 @@ color: #fff;
     background: #333;
     color: #fff;
 }
-@media(max-width: 575px){
+@media(max-width: 768px){
 .home .para{
     font-size: 20px;
 }
@@ -368,7 +368,7 @@ section.services .feet p{
 .blog h2 span{
    color: #1a53ff; 
 }
-@media (max-width: 575px){
+@media (max-width: 768px){
     .blog h2{font-size: 25px !important}
     }
 
@@ -455,7 +455,7 @@ section.question .images .left-2{
   overflow: hidden;
   color: #555;
 }
-@media(max-width: 575px){
+@media(max-width: 768px){
     .question .Box .accordion{
         width: 156%;
 
