--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 html, body { max-width: 100%;}
 body{
     font-family: 'Roboto Slab', serif;
+    overflow: hidden;
 }
 .clearfix{
     clear:both;
@@ -236,7 +237,7 @@ color: #333;
 }
 @media (max-width: 575px){
     .economy .row .root p#fast{
-    
+    width: 105%
 }
 .economy .row .card{
     margin-top: 20px;
@@ -310,6 +311,11 @@ section.services .feet h4{
 section.services .feet p{
     color:#555;
     margin: auto;
+}
+@media(max-width: 575px){
+    .services{
+        background: #fff;
+    }
 }
 /*blog*/
 .blog{
